Wireshark NULL pointer dereference in dissect_tcap_AARQ_application_context_name
This issue was migrated from bug 15464 in our old bug tracker.
Original bug information:
Reporter: Mateusz Jurczyk
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Linux
Platform: x86-64
Version: Git
Attachments:
signal_sigsegv_7fffeb7637a9_13577_b9076d5c4cb3339644c8373ba97016f0.pcap: Reproducer
See also: http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2019-9208